Added background notes and placeholders for other notes.

--- a/web/schedule.html
+++ b/web/schedule.html
@@ -8,6 +8,15 @@ layout: main
   at least until it actually takes place!
 </p>
 
+<p>
+  In addition to the course notes, I have posted some
+  <a href="lec/background.pdf">background notes</a>.  Some material
+  in these notes is truly background that you will have seen in
+  prior classes.  Other material may be new to you, and some of it
+  will be covered in class.  You should feel free to ask questions
+  about any of this!
+</p>
+
 <div class="table-responsive">
   <table class="table table-striped">
     <colgroup>
